# snapshotd

./: Cargo.toml  README.md
src/: cli.rs  configs.rs  fuckyou  main.rs  model.rs  out.txt  snapshot_policy_example.json  snapshot_utils.rs
