[package]
name = "snapshotd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-smithy-types-convert = {version = "0.56.1", features = ["convert-chrono", "convert-time"]}
aws-smithy-types = "1.1.5"
aws-sdk-ec2 = "1.18.0"
chrono = "0.4.33"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.8.1"
